# SLAE32

./: CHEATSHEET.md  README.md
1_BindShell/: .gitignore  CMakeLists.txt  bind_shell.nasm  bindshell.c  call_shellcode.c  compile.sh  compile_all.sh  gdbcmds  turtle.c
2_ReverseShell/: CMakeLists.txt
2_ReverseShell/src/: call_shellcode.c  turtle.c
Blog/: index.md
docs/: assignment1.md  index.md
